@@ -1,5 +1,17 @@
 2020-10-05  Devin Rousso  <drousso@apple.com>
 
+        Web Inspector: Sources: add a + to the Local Overrides section
+        https://bugs.webkit.org/show_bug.cgi?id=217235
+
+        Reviewed by Brian Burg.
+
+        * UserInterface/Views/SourcesNavigationSidebarPanel.js:
+        (WI.SourcesNavigationSidebarPanel):
+        (WI.SourcesNavigationSidebarPanel.prototype._populateCreateLocalOverrideContextMenu): Added.
+        (WI.SourcesNavigationSidebarPanel.prototype._populateCreateResourceContextMenu):
+
+2020-10-05  Devin Rousso  <drousso@apple.com>
+
         Web Inspector: unable to create local override for resource that failed to load
         https://bugs.webkit.org/show_bug.cgi?id=217234
         <rdar://problem/69888143>
